--- a/assets/scss/templates/_page-buddypress.scss
+++ b/assets/scss/templates/_page-buddypress.scss
@@ -75,10 +75,6 @@
   #item-body {
     #message {
       margin-bottom: 4rem;
-      p {
-        @extend .callout;
-        @extend .warning;
-      }
     }
   }
   #group-admins {
